# content-api-service

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-tests.yaml  docker-compose.dev.yaml  docker-compose.noapp.yaml  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  setup.cfg
infra/gunicorn/: gunicorn.conf.py
infra/nginx/: Dockerfile  app.conf  nginx.conf
src/: main.py
src/api/: base.py
src/api/v1/: films.py  genres.py  persons.py  schemas.py
src/core/: config.py  logger.py
src/db/: cache.py  elastic.py  redis.py
src/models/: __init__.py  base.py  film.py  genre.py  person.py
src/services/: base.py  film.py  genre.py  person.py
tests/functional/: Dockerfile  config.py  conftest.py  docker-compose.app.yaml  docker-compose.yaml  pyproject.toml
tests/functional/data/: data.py  indexes.py  models.py
tests/functional/src/: test_films.py  test_genres.py  test_persons.py
tests/functional/utils/: base.py  utils.py  wait_for_elastic.py  wait_for_redis.py
