[tool.poetry]
name = "movies_api"
version = "0.1.0"
description = ""
authors = ["Arseniy Popov <arseniypopov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.19.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
aioredis = "2.0.1"
elasticsearch = {version = "7.17.3", extras = ["async"]}
fastapi = "0.78.0"
orjson = "3.7.2"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
uvicorn = "0.17.6"
uvloop = "0.16.0"
elasticsearch-dsl = "^7.4.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
