[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["Arseniy Popov <arseniypopov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
elasticsearch = {extras = ["async"], version = "^8.2.3"}
pytest = "^7.1.2"
aioredis = "^2.0.1"
black = "^22.3.0"
python-dotenv = "^0.20.0"
pydantic = "^1.9.1"
pytest-asyncio = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
